--- a/image_classifier.ipynb
+++ b/image_classifier.ipynb
@@ -794,9 +794,9 @@
    "outputs": [],
    "source": [
     "if yhat > 0.5: \n",
-    "    print(f'Predicted class is Sad')\n",
+    "    print(f'Predicted class is ai image')\n",
     "else:\n",
-    "    print(f'Predicted class is Happy')"
+    "    print(f'Predicted class is real image')"
    ]
   },
   {
